updated component to test the responsive issue on iphones.

--- a/src/components/Trafika/Main/intro/styles.scss
+++ b/src/components/Trafika/Main/intro/styles.scss
@@ -3293,22 +3293,25 @@
             flex-direction: column;
             padding: 15vh 5vw 0 5vw;
             z-index: 2;
+            overflow: hidden;
         
             .intro__main__trafika__text{
-                width: 100%;
+                width: 100vw;
                 height: 60%;
                 display: flex;
                 justify-content: flex-start;
                 align-items: center;
                 flex-direction: column;
+                position: relative;
                 gap: 15vw;
                 .intro__main__trafika__text__title{
-                    width: 90%;
+                    width: 90vw;
                     height: 40%;
                     display: flex;
                     justify-content: center;
                     align-items: flex-start;
                     flex-direction: column;
+                    position: relative;
                     h3{
                         width: 100%; // Changed from 50% to 100%
                         height: auto; // Changed from 100% to auto
@@ -3347,7 +3350,7 @@
                 }
         
                 .intro__main__trafika__text__link{
-                    width: 90%;
+                    width: 90vw;
                     height: 30%;
                     display: flex;
                     justify-content: flex-start;
@@ -3403,12 +3406,13 @@
             }
         
             .intro__main__trafika__content{
-                width: 90%;
+                width: 90vw;
                 height: 100%;
                 display: flex;
                 justify-content: flex-start;
                 align-items: flex-end;
                 flex-direction: column;
+                position: relative;
                 padding: 0 1vw;
                 gap: 2.5vh;
         
